--- a/SF.SGL.UI/wwwroot/index.html
+++ b/SF.SGL.UI/wwwroot/index.html
@@ -9,6 +9,13 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="SF.SGL.UI.styles.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
+
+    <!--<link href="assets/css/default.css" rel="stylesheet" />-->
+    <!--<link href="assets/css/dark.css" rel="stylesheet" />-->
+    <!--<link href="assets/css/humanistic.css" rel="stylesheet" />-->
+    <link href="assets/css/software.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,6 +27,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
 </html>
