--- a/SF.SGL.UI/wwwroot/index.html
+++ b/SF.SGL.UI/wwwroot/index.html
@@ -19,11 +19,11 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">Carregando...</div>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        Ocorreu um erro desconhecido.
+        <a href="" class="reload">Recarregar</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
