--- a/SF.SGL.UI/wwwroot/index.html
+++ b/SF.SGL.UI/wwwroot/index.html
@@ -13,11 +13,10 @@
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
 
     <!--<link href="assets/css/default.css" rel="stylesheet" />-->
-    <!--<link href="assets/css/dark.css" rel="stylesheet" />-->
     <!--<link href="assets/css/humanistic.css" rel="stylesheet" />-->
-    <link href="assets/css/software.css" rel="stylesheet" />
+    <!--<link id="theme" href="assets/css/dark.css" rel="stylesheet" />-->
+    <link id="theme" href="assets/css/software.css" rel="stylesheet" />
 </head>
-
 <body>
     <div id="app">Carregando...</div>
 
