--- a/SF.SGL.UI/wwwroot/index.html
+++ b/SF.SGL.UI/wwwroot/index.html
@@ -8,7 +8,7 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <link href="SF.SGL.UI.styles.css" rel="stylesheet" />
+    <!--<link href="SF.SGL.UI.styles.css" rel="stylesheet" />-->
     
     <!--<link href="assets/css/default.css" rel="stylesheet" />-->
     <!--<link href="assets/css/humanistic.css" rel="stylesheet" />-->
