--- a/SF.SGL.UI/wwwroot/index.html
+++ b/SF.SGL.UI/wwwroot/index.html
@@ -8,10 +8,8 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
-    <!--<link href="SF.SGL.UI.styles.css" rel="stylesheet" />-->
-    
-    <!--<link href="assets/css/default.css" rel="stylesheet" />-->
-    <!--<link href="assets/css/humanistic.css" rel="stylesheet" />-->
+    <link href="SF.SGL.UI.styles.css" rel="stylesheet" />
+ 
     <!--<link id="theme" href="assets/css/dark.css" rel="stylesheet" />-->
     <link id="theme" href="assets/css/software.css" rel="stylesheet" />
 </head>
