--- a/SF.SGL.UI/wwwroot/index.html
+++ b/SF.SGL.UI/wwwroot/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>SF.SGL.UI</title>
     <base href="/" />
+
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="css/loading.css" rel="stylesheet" />
+
     <link href="SF.SGL.UI.styles.css" rel="stylesheet" />
- 
-    <!--<link id="theme" href="assets/css/dark.css" rel="stylesheet" />-->
-    <link id="theme" href="assets/css/software.css" rel="stylesheet" />
+
+    <!--<link id="theme" href="css/dark.css" rel="stylesheet" />-->
+    <link id="theme" href="css/software.css" rel="stylesheet" />
 </head>
+
 <body>
-    <div id="app">Carregando...</div>
+    <div id="app">
+        <div class="sk-fading-circle">
+            <div class="sk-circle1 sk-circle"></div>
+            <div class="sk-circle2 sk-circle"></div>
+            <div class="sk-circle3 sk-circle"></div>
+            <div class="sk-circle4 sk-circle"></div>
+            <div class="sk-circle5 sk-circle"></div>
+            <div class="sk-circle6 sk-circle"></div>
+            <div class="sk-circle7 sk-circle"></div>
+            <div class="sk-circle8 sk-circle"></div>
+            <div class="sk-circle9 sk-circle"></div>
+            <div class="sk-circle10 sk-circle"></div>
+            <div class="sk-circle11 sk-circle"></div>
+            <div class="sk-circle12 sk-circle"></div>
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         Ocorreu um erro desconhecido.
@@ -22,6 +41,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 
